--- a/server/.env
+++ b/server/.env
@@ -4,8 +4,8 @@ PORT=3000
 # MySQL Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_mysql_password
+DB_PASSWORD=root
 DB_NAME=weather_app
 
 # OpenWeatherMap API Key
-OPENWEATHER_API_KEY=bc7df9163022ad89647bc8397da51961
+OPENWEATHER_API_KEY=9241d5480fc48caeb6e28b2db3147bdb
